updated with redux

--- a/packages/sample-browser-server/index.html
+++ b/packages/sample-browser-server/index.html
@@ -12,8 +12,6 @@
         ...and refreshing this page!
       </div>
     </div>
-    <script src="node_modules/react/dist/react.js"></script>
-    <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script src="dist/bundle.js"></script>
 
 <style>
@@ -63,9 +61,7 @@ footer {
 </style>
   <footer class="dark">
     <section class="container copyright">
-      Another unrepentant production from
-      <a href="https://rjzaworski.com">rj zaworski</a>
-      <!-- :^) -->
+        CDMBase LLC
     </section>
   </footer>
   </body>
