--- a/packages/sample-browser-server/index.html
+++ b/packages/sample-browser-server/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="demo">
-      <div id="redux-app-root">
+      <div id="content">
         Try building the demo:
         <pre>
         </pre>
