--- a/portable-devices/desktop/assets/html/tray-page.html
+++ b/portable-devices/desktop/assets/html/tray-page.html
@@ -1,74 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <style type="text/css">
-      .info{
-        padding-left: 194px;
-      }
-      .story{
-        display: flex;
-        height: 30px;
-      }
-      .story i{
-          margin-top: 4px;
-          margin-left: 5px;
-          height: 30px;
-          padding-top: 10px;
-      }
-      .story h2{
-          margin-top: 2px;
-          margin-left: 5px;
-      }
-      .txt_story{
-          padding-top: 2px;
-          margin-left: 30px;
-      }
-      </style> 
-    <!-- <link rel="stylesheet" href="../style/tray-page.css"> -->
     <script type='text/javascript'>
       window.ipcRenderer = require('electron').ipcRenderer;
     </script>
   </head>
 
   <body>
-    <div>
-      <i class="fa fa-list-alt" aria-hidden="true" style="font-size:24px"></i>
-      <i class="fa fa-info-circle info" aria-hidden="true" style="font-size:24px"></i>
-    </div>
-    <hr />
-
-    <div class="story">
-      <i class="fa fa-circle-thin" aria-hidden="true" style="font-size:20px"></i>
-      <h2>Story 1</h2>
-    </div>
-    <div class="txt_story">Can't wait to tray load</div>
-    <hr />
-
-    <div class="story">
-      <i class="fa fa-circle-thin" aria-hidden="true" style="font-size:20px"></i>
-      <h2>Story 2</h2>
-    </div>
-    <div class="txt_story">Can't wait to tray load</div>
-    <hr />
-
-    <div class="story">
-      <i class="fa fa-circle-thin" aria-hidden="true" style="font-size:20px"></i>
-      <h2>Story 3</h2>
-    </div>
-    <div class="txt_story">Can't wait to tray load</div>
-    <hr />
-    <div>
-      <i class="fa fa-play-circle-o" aria-hidden="true" style="font-size:24px"></i>
-      <i class="fa fa-pause-circle-o" aria-hidden="true" style="font-size:24px"></i>
-      <i class="fa fa-times" aria-hidden="true" style="font-size:24px; margin-left: 170px;"></i>
-    </div>
-
-    <br />
-    <br />
-    <br />
-
     <button id='my-button'>X</button>
     <button id='my-second-button'>Set rundom!</button>
     <button id='notify'>Notify!</button>
@@ -76,29 +14,28 @@
     <button id='main'>Open Main</button>
 
       <script type='text/javascript'>
-    //  document.getElementById("my-button").addEventListener("click", function (e) {
-    //     ipcRenderer.send('quit-app');
-    //   });
+     document.getElementById("my-button").addEventListener("click", function (e) {
+        ipcRenderer.send('quit-app');
+      });
 
-    // document.getElementById("about").addEventListener("click", function (e) {
-    //     ipcRenderer.send('show-about-window-event');
-    //   });
+     document.getElementById("about").addEventListener("click", function (e) {
+        ipcRenderer.send('show-about-window-event');
+      });
 
-    //  document.getElementById("main").addEventListener("click", function (e) {
-    //   console.log("=====main notification====");
-    //     ipcRenderer.send('show-main-window-event');
-    //   });
+     document.getElementById("main").addEventListener("click", function (e) {
+        ipcRenderer.send('show-main-window-event');
+      });
 
 
-      // var textArray = ['First', 'Second', 'Third'];
+      var textArray = ['First', 'Second', 'Third'];
 
-      // document.getElementById('my-second-button').addEventListener("click", function (e) {
-      //   console.log('clicked----tray second button')
-      //   var randomIndex = Math.floor(Math.random() * textArray.length);
-      //   var randomString = textArray[randomIndex];
-      //   // On click we send event to Main Process (index.js file) with a random string.
-      //   ipcRenderer.send('update-title-tray-window-event', randomString);
-      // });
+      document.getElementById('my-second-button').addEventListener("click", function (e) {
+        console.log('clicked----tray second button')
+        var randomIndex = Math.floor(Math.random() * textArray.length);
+        var randomString = textArray[randomIndex];
+        // On click we send event to Main Process (index.js file) with a random string.
+        ipcRenderer.send('update-title-tray-window-event', randomString);
+      });
 
 
 
@@ -106,10 +43,9 @@
         let notif = new window.Notification( 'My First Notification', {
           body: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, maxime explicabo dolores tenetur'
         })
-        console.log("=====main notification====");
+
         notif.onclick = function () {
           window.ipcRenderer.send('show-main-window-event')
-          // window.ipcRenderer.send('show-about-window-event')
         }
       });
 
