--- a/portable-devices/desktop/assets/html/tray-page.html
+++ b/portable-devices/desktop/assets/html/tray-page.html
@@ -1,56 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script type='text/javascript'>
-      window.ipcRenderer = require('electron').ipcRenderer;
-    </script>
-  </head>
 
-  <body>
-    <button id='my-button'>X</button>
-    <button id='my-second-button'>Set rundom!</button>
-    <button id='notify'>Notify!</button>
-    <button id='about'>Open About</button>
-    <button id='main'>Open Main</button>
+<head>
+  <meta charset="utf-8">
+  <title>SampleDesktop</title>
+  <script>require("source-map-support/source-map-support.js").install()</script>
+  <link href="styles.css" rel="stylesheet">
+  <script type='text/javascript'>
+    window.ipcRenderer = require('electron').ipcRenderer;
+  </script>
+</head>
 
-      <script type='text/javascript'>
-     document.getElementById("my-button").addEventListener("click", function (e) {
-        ipcRenderer.send('quit-app');
-      });
+<body>
+  Tray APP PAGE
+  <div id="app" />
+  <script type='text/javascript'>
+    var bundlePath = './tray.js';
+    if (process.env.NODE_ENV === 'development') {
+      bundlePath = 'http://localhost:9080/tray.js';
+    }
 
-     document.getElementById("about").addEventListener("click", function (e) {
-        ipcRenderer.send('show-about-window-event');
-      });
-
-     document.getElementById("main").addEventListener("click", function (e) {
-        ipcRenderer.send('show-main-window-event');
-      });
-
-
-      var textArray = ['First', 'Second', 'Third'];
-
-      document.getElementById('my-second-button').addEventListener("click", function (e) {
-        console.log('clicked----tray second button')
-        var randomIndex = Math.floor(Math.random() * textArray.length);
-        var randomString = textArray[randomIndex];
-        // On click we send event to Main Process (index.js file) with a random string.
-        ipcRenderer.send('update-title-tray-window-event', randomString);
-      });
-
-
-
-      document.getElementById("notify").addEventListener("click", function (e) {
-        let notif = new window.Notification( 'My First Notification', {
-          body: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, maxime explicabo dolores tenetur'
-        })
-
-        notif.onclick = function () {
-          window.ipcRenderer.send('show-main-window-event')
-        }
-      });
-
-
+    var js_script = document.createElement('script');
+    js_script.src = bundlePath;
+    js_script.async = true;
+    document.body.appendChild(js_script);
 
   </script>
-  </body>
+</body>
+
 </html>
