--- a/portable-devices/desktop/assets/html/about-page.html
+++ b/portable-devices/desktop/assets/html/about-page.html
@@ -8,6 +8,28 @@
   </head>
 
   <body>
+
+    <div id='app'></div>
+
+
+    <script>
+      var bundlePath = '../renderer/about.js';
+
+      // if (process.env.NODE_ENV === 'development') {
+        bundlePath = 'http://localhost:9080/about.js';
+      // }
+
+      var js_script = document.createElement('script');
+      js_script.src = bundlePath;
+      js_script.async = true;
+      document.body.appendChild(js_script);
+    </script>
+
+<!-- <div>
+  About --------------
+</div> -->
+
+
     <style type="text/css">
       #header {
         -webkit-user-select: none;
