--- a/portable-devices/desktop/assets/html/about-page.html
+++ b/portable-devices/desktop/assets/html/about-page.html
@@ -10,24 +10,18 @@
   <body>
 
     <div id='app'></div>
-
-
-    <script>
-      var bundlePath = '../renderer/about.js';
-
-      // if (process.env.NODE_ENV === 'development') {
+    <script type='text/javascript'>
+      var bundlePath = './about.js';
+      if (process.env.NODE_ENV === 'development') { 
         bundlePath = 'http://localhost:9080/about.js';
-      // }
-
+      }
+  
       var js_script = document.createElement('script');
       js_script.src = bundlePath;
       js_script.async = true;
       document.body.appendChild(js_script);
+  
     </script>
-
-<!-- <div>
-  About --------------
-</div> -->
 
 
     <style type="text/css">
