--- a/portable-devices/desktop/assets/html/tray-page.html
+++ b/portable-devices/desktop/assets/html/tray-page.html
@@ -2,15 +2,14 @@
 <html>
 
 <head>
+  <script>require("source-map-support/source-map-support.js").install()</script>
+  <link href="styles.css" rel="stylesheet">
   <script type='text/javascript'>
     window.ipcRenderer = require('electron').ipcRenderer;
   </script>
 </head>
 
 <body>
-  Tray APP PAGE
-  <br />
-
   <div id="app"></div>
 
   <script type='text/javascript'>
